--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@react-oauth/google": "^0.12.1",
+    "aos": "^2.3.4",
     "axios": "^1.6.5",
+    "firebase": "^10.7.1",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
